--- a/homepage.html
+++ b/homepage.html
@@ -112,7 +112,7 @@ footer {
                 <li><a href="culture.html">Culture</a></li>
                 <li><a href="famousdestination.html">Destination</a></li>
                 <li><a href="tours.html">Tours</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contacts.html">Contact</a></li>
             
             <li><a href="login.html" class="login-btn">Login/Register</a></li>
